[package]
name = "Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.20.1" }
twilight-cache-inmemory = "0.13.0"
twilight-gateway = "0.13.0"
twilight-http = "0.13.0"
twilight-model = "0.13.1"
anyhow = { default-features = false, features = ["std"], version = "1.0.63" }
twilight-interactions = "0.13"

